[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autots-mcp"
version = "1.0.2"
authors = [
  { name="Colin Catlin", email="colin.catlin@gmail.com" },
]
description = "Convenience package to install AutoTS with MCP dependencies"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "autots[mcp]>=1.0.1",
]

[project.scripts]
autots-mcp-server = "autots.mcp.server:serve"
autots-mcp = "autots.mcp.server:serve"

[project.urls]
"Homepage" = "https://github.com/winedarksea/AutoTS"
"Bug Tracker" = "https://github.com/winedarksea/AutoTS/issues"

[tool.setuptools]
packages = []
